--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronometro</title>
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="./CSS/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,11 +21,11 @@
             <span id="miliseconds">000</span>
         </div>
 
-        <input type="image" onclick="play()" src="../images/play.jpg">
-        <input type="image" onclick="pause()" id="pause" src="../images/pause.png">
-        <input type="image" onclick="erase()" src="../images/stop.webp">
-        <input type="image" onclick="add()" src="../images/images.png">
-        <input type="image" onclick="delet()" src="../images/360_F_346383913_JQecl2DhpHy2YakDz1t3h0Tk3Ov8hikq.jpg">
+        <input type="image" onclick="play()" src="./images/play.jpg">
+        <input type="image" onclick="pause()" id="pause" src="./images/pause.png">
+        <input type="image" onclick="erase()" src="./images/stop.webp">
+        <input type="image" onclick="add()" src="./images/images.png">
+        <input type="image" onclick="delet()" src="./images/360_F_346383913_JQecl2DhpHy2YakDz1t3h0Tk3Ov8hikq.jpg">
 
         <div id="names"></div>
     </div>
