--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div id="names"></div>
     </div>
-    <script src="../Scripts/script.js"></script>
+    <script src="./Scripts/script.js"></script>
 </body>
 
 </html>
